[package]
name = "tiler"
version = "0.1.0"
edition = "2021"
default-run = "mosaic"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
num = "0.4"
rand = "0.8.5"
itertools = "0.10.5"
criterion = "0.6.0"

[[bench]]
name = "diff"
harness = false

[[bench]]
name = "analyse"
harness = false
